<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--    <CheckBoxPreference
            android:key="example_checkbox"
            android:title="@string/pref_title_social_recommendations"
            android:summary="@string/pref_description_social_recommendations"
            android:defaultValue="true" />-->

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <PreferenceCategory
        android:key="pref_key_storage_settings"
        android:title="@string/pref_category_general">

        <EditTextPreference
            android:defaultValue="@string/pref_default_send_interval"
            android:inputType="number"
            android:key="send_interval"
            android:selectAllOnFocus="true"
            android:title="@string/pref_title_send_interval" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_storage_settings"
        android:title="@string/pref_category_audio">

        <EditTextPreference
            android:defaultValue="@string/pref_default_cas_url_sound"
            android:inputType="textUri"
            android:key="cas_url_sound"
            android:selectAllOnFocus="true"
            android:title="@string/pref_title_cas_url_sound" />
        <EditTextPreference
            android:defaultValue="@string/pref_default_sound_max"
            android:inputType="number"
            android:key="sound_max"
            android:selectAllOnFocus="true"
            android:title="@string/pref_title_sound_max" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_storage_settings"
        android:title="@string/pref_category_light">

        <EditTextPreference
            android:defaultValue="@string/pref_default_cas_url_light"
            android:inputType="textUri"
            android:key="cas_url_light"
            android:selectAllOnFocus="true"
            android:title="@string/pref_title_cas_url_light" />
        <EditTextPreference
            android:defaultValue="@string/pref_default_light_max"
            android:inputType="number"
            android:key="light_max"
            android:selectAllOnFocus="true"
            android:title="@string/pref_title_light_max" />

    </PreferenceCategory>

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--    <ListPreference
            android:key="example_list"
            android:title="@string/pref_title_add_friends_to_messages"
            android:defaultValue="-1"
            android:entries="@array/pref_example_list_titles"
            android:entryValues="@array/pref_example_list_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null" />-->

</PreferenceScreen>
